# general_sdk_grpc_asr

./: .gitignore  CMakeLists.txt  README.md
include/: ss_engine_wrapper.h  ss_export.h
lib/Windows/x64/: ssasr.lib
lib/Windows/x86/: ssasr.lib
src/: grpc_asr.cpp
